samples/_failures_safe/1761654033_ef4a34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c916efd.c: In function ‘main’:
./samples/SAFE/__tmp_8c916efd.c:157:5: error: expected expression at end of input
  157 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_8c916efd.c:157:5: error: expected declaration or statement at end of input
